Page d'accueil créée. Task #2 - Créer la page d'accueil

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Créer par THUILLIEZ Dimitri
+Créer par THUILLIEZ Dimitri - BTS SIO SISR
 -->
 <!doctype html>
 <html lang="fr">
