--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Créer par THUILLIEZ Dimitri - BTS SIO SISR
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="icon" href="favicon.ico">
 
     <title>Portoflio de THUILLIEZ Dimitri - BTS SIO 2021</title>
   </head>
