Création de la page CV

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@ Créer par THUILLIEZ Dimitri - BTS SIO SISR
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="cv.html" class="nav-link">
+                            <a href="pages/cv.html" class="nav-link">
                                 <span class="fa fa-id-badge"></span> CV
+                                
                             </a>
                         </li>
                         <li class="dropdown nav-item">
