Ajout de la page de réalisation android Modification de la page d'accueil Modification de la page CV

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ Créer par THUILLIEZ Dimitri - BTS SIO SISR
         <div class="jumbotron">
             <div class="container">
             <h1>Bonjour et bienvenu sur mon portfolio !</h1>
-            <p> <img id="maPhoto" class="float-left rounded" src="images/AmeliaPilou.jpg" alt="Ma photo d'identité">
-                Je m'appelle THUILLIEZ Dimitri, j'ai 20 ans et ce site a pour vocation de me présenter en tant ue personne, en tant qu'étudiant et candidat à l'obtention du BTS SIO (Service Informatique aux Organisation) et en tant que futur professionnel de l'informatique.
+            <p> <img id="maPhoto" class="float-left rounded" src="images/photo.jpg" alt="Ma photo d'identité">
+                20 ans, j’habite au Cannet-des-Maures, j’ai toujours été passionné par l’informatique ainsi que l’enseignement, j’ai comme objectif de devenir professeur d’informatique et je me suis tourné vers un BTS SIO au lycée Bonaparte de Toulon après avoir obtenu mon bac professionnel SN option RISC avec une note de 15,12.
             </p>
             <p>
                 <a class="btn btn-primary btn-lg" href="pages/cv.html" role="button">En savoir plus »</a>
@@ -134,13 +134,8 @@ Créer par THUILLIEZ Dimitri - BTS SIO SISR
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <h2>Étudiant du CNED</h2>
-                        <p>J'ai choisi de suivre le BTS SIO à distance par le Centre National
-                            d'Enseignement à Distance car je souhaitais pourvoir avancer à mon rythme,
-                            choisir moi-même mon emploi du temps, apprendre à être autonome, pouvoir
-                            utiliser les outils de collaboration à distance et devenir plus responsable en
-                            étant capable de me fixer moi-même des contraintes, des limites et des
-                            objectifs à atteindre !
+                        <h2>Étudiant en BTS SIO</h2>
+                        <p>J'ai choisi de suivre le BTS SIO option SISR car je suis passionné d'informatique depuis bien longtemps, je compte continuer mes études dans ce domaine jusqu'à un Master en enseignement afin d'exercer mon métier souhaité !
                         </p>
                         <p><a class="btn btn-secondary" href="http://www.cned.fr" target="_blank"
                               role="button">En savoir plus »</a>
@@ -148,15 +143,7 @@ Créer par THUILLIEZ Dimitri - BTS SIO SISR
                     </div>
                     <div class="col-lg-4">
                         <h2>Le BTS SIO</h2>
-                        <p>Passionnée d'informatique depuis mon plus jeune âge, j'aime apprendre à faire
-                            de nouvelles choses avec mon ordinateur, mon smartphone ou ma tablette. Une
-                            Geek ? Oui assurément ! Mais j'aimerais maintenant passer au niveau au-dessus
-                            et devenir une vraie Nerd, dans le bon sens du terme ! Après mon bac, le BTS
-                            SIO s'est présenté comme une évidence. Avec 60% d'Informatique "pure", 13%
-                            d'Économie, management et droit de l'informatique, 9% d'Anglais, 9% de culture
-                            générale et 9% de Maths, je savais que cette formation allait me mettre le
-                            pied à l'étrier pour poursuivre ensuite dans cette voie et devenir
-                            informaticienne !
+                        <p>Ce BTS est la suite logique de mes études, ayant déjà obtenu un bac pro Système Numérique.
                         </p>
                         <p><a class="btn btn-secondary" href="https://fr.wikipedia.org/wiki/Brevet_de_tec
                               hnicien_supérieur_-_Services_informatiques_aux_organisations"
@@ -164,17 +151,8 @@ Créer par THUILLIEZ Dimitri - BTS SIO SISR
                         </p>
                     </div>
                     <div class="col-lg-4">
-                        <h2>Option B SLAM</h2>
-                        <p>En fin de premier semestre, on doit choisir notre option. "Solutions
-                            Logicielles et Applications Métiers" est l'option qui m'a séduit&nbsp;!
-                            Travailler en équipe à la satisfaction de besoins d'un client, définir des
-                            spécifications, faire des tests, corriger des bugs, faire de la maintenance,
-                            veiller à la sécurité des données à caractère personnel... tout en apprenant
-                            les bases du métier de développeuse : modélisation des données
-                            avec Merise et UML, programmation objet avec Java, C# et PHP, conception
-                            de bases de données sous PostgreSQL et MySQL, réalisation de
-                            composants logiciels avec Symfony, gestion de projet, méthodes agiles...
-                            J'étais sûre que ça serait fait pour moi !
+                        <h2>Option A SISR</h2>
+                        <p>Cette option est pour moi évidente ! J'ai toujours étais passionné par les réseaux informatiques, que ce soit leur fonctionnement, la sécurité, leur utilisation, etc.
                         </p>
                         <p><a class="btn btn-secondary" href="https://www.onisep.fr/Ressources/Univers-Fo
                               rmation/Formations/Post-bac/bts-services-informatiques-aux-organisations-op
