--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Créer par THUILLIEZ Dimitri - BTS SIO SISR
                                 <li role="presentation" class="dropdown-header dropdown-item">
                                     En autonomie</li>
                                 <li role<="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Application Android</a>
+                                    <a role="menuitem" href="pages/appliandroid.html">Application Android</a>
                                 </li>
                                 <li role="presentation" class="dropdown-item">
                                     <a role="menuitem" href="#">Site web</a>
